[package]
name = "helium-name"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.3"
solana-program = "1.10.10"
base58 = "*"

[dev-dependencies]
solana-program-test = "1.10.10"
solana-sdk = "1.10.10"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
